RPGEquipment now stores LootItems instead of IDs